# os-project

./: CMakeLists.txt  HELLO.TXT  README.md  efi mem map.ods  grub.cfg  grub_img.cfg  run_qemu.sh
bootloader/: CMakeLists.txt  assert.h  cpu.asm  cpu.h  cpuid.asm  cpuid.h  debug.asm  debug.c  debug.h  disk.asm  disk.c  disk.h  elf.h  entry.asm  linker.ld  mbr.asm  mem.asm  mem.h  print.asm  print.c  print.h  stage2.asm  stage2.c  test.asm  test.c
bootstrap/: CMakeLists.txt  linker.ld  linker.ld.in  types.h
bootstrap/boot/: boot.asm  boot.c  gdt.asm  gdt.c  gdt.h  interrupts.asm  interrupts.c  interrupts.h  irq.asm  irq.c  irq.h  loader.c
bootstrap/debug/: assert.h  debug.c  debug.h  panic.c  panic.h  serial.c  serial.h  term.c  term.h
bootstrap/dev/: ide.c  ide.h  pci.c  pci.h
bootstrap/fs/: ext2.c  ext2.h  fat32.c  fat32.h  ide.c  ide.h
bootstrap/io/: acpi.c  acpi.h  port.c  port.h  ps2.c  ps2.h  timer.c  timer.h
bootstrap/kernel/: kernel.c  kernel.h
bootstrap/mm/: kheap.c  kheap.h  kmem.c  kmem.h  paging.c  paging.h
bootstrap/std/: attributes.h  bitset.c  bitset.h  list.c  list.h  math.c  math.h  ordered_array.c  ordered_array.h  registers.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  types.h
common/: boot.ini  boot_data.h
efiloader/: CMakeLists.txt  debug.c  debug.h  elf.c  elf.h  file.c  file.h  main.c  main.h  mem.c  mem.h  printf.c  printf.h  serial.c  serial.h  strings.c  strings.h  stub.c  video.c  video.h
image/boot/: config.ini
image/python/: __builtins.py  test.py
kernel2/: CMakeLists.txt  linker.ld  main.c
rkernel/: CMakeLists.txt  Cargo.toml  bootstrap.c  linker.ld  target.json
rkernel/ioport/: Cargo.toml
rkernel/ioport/src/: lib.rs
rkernel/kernel/src/: lib.rs
rkernel/kernel/src/io/: mod.rs
rkernel/pci/: Cargo.toml
rkernel/pci/src/: lib.rs
rkernel/src/: lib.rs
rkernel/src/acpi/: mod.rs  structs.rs
rkernel/src/boot/: entry.rs
rkernel/src/io/: port.rs  serial.rs
rkernel/src/mm/: bump.rs  kheap.rs  mod.rs  pager.rs
rkernel/src/pci/: mod.rs  pciconfig.rs
rkernel/src/x86_64/: addr.rs  mod.rs
test64/: CMakeLists.txt  linker.ld  main.c
