[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = []

[dependencies]
bit_field = "0.10.1"

[lib]
crate-type=["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
